# dashApi

./: .dockerignore  Dockerfile  FastApi.md  README.md  pyproject.toml  requirements.txt  start.sh  testapp.py
.github/workflows/: docker-build.yml
dashApi/: __init__.py  cli.py  config.py  main.py
dashApi/api/: __init__.py  duckdb.py  ping.py  plot.py  routes.py
dashApi/core/: __init__.py  duckdb_reader.py  plotter.py  processor.py  serialization.py
dashApi/models/: schema.py
scripts/: run_dev.py
tests/: test_basic.py
