[project]
name = "dashApi"
version = "0.1.0"
description = "A FastAPI backend for data science dashboards"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic_settings",
    "typer"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
