[project]
name = "dashapi"
version = "0.1.0"
description = "A FastAPI backend for data science dashboards"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "typer (>=0.16.1,<0.17.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "plotnine (>=0.15.0,<0.16.0)",
    "gapminder (>=0.1,<0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pandas-stubs = "^2.3.0.250703"
ruff = "^0.12.10"
black = "^25.1.0"

